syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

//THE student service defintion

service RemoteStudent{
 rpc GetStudentInfo (StudentLookupModel) returns (StudentModel);
 rpc InsertStudent (StudentModel) returns (Reply);

}

message StudentLookupModel{
 int32 studentId = 1;
}


//The responde message
message StudentModel{
 int32 studentId = 1;
 string firstName = 2;
 string lastName = 3;
 string school = 4;

}



message Reply {
	string result = 1;
	bool isOk = 2;
}

message Empty {

}

